Remove chrome://md-settings -> settings redirect

Material Design Settings became the default in Chrome 59.
This redirect is no longer needed and is just confusing folks.

R=thestig@chromium.org
BUG=761258

Change-Id: I1bf0c2f2293098a85d66d1e35abc97fd1777eafc
Reviewed-on: https://chromium-review.googlesource.com/669893
Reviewed-by: Demetrios Papadopoulos <dpapad@chromium.org>
Reviewed-by: Lei Zhang <thestig@chromium.org>
Commit-Queue: Dan Beam (no longer on Chrome) <dbeam@chromium.org>
Cr-Commit-Position: refs/heads/master@{#502980}
Former-commit-id: a1faa2513edcd16d4c60861bfa34a48c58e69502