chrome/browser/browser_about_handler.cc
@@ -61,13 +61,9 @@ bool WillHandleBrowserAboutURL(GURL* url,
   if (host == chrome::kChromeUIAboutHost)
     host = chrome::kChromeUIChromeURLsHost;
 
-  const char kLegacyMaterialDesignSettingsHost[] = "md-settings";
-
   // Legacy redirect from chrome://history-frame to chrome://history.
   if (host == chrome::kDeprecatedChromeUIHistoryFrameHost)
     host = chrome::kChromeUIHistoryHost;
-  else if (host == kLegacyMaterialDesignSettingsHost)
-    host = chrome::kChromeUISettingsHost;
 
   // Replace cache with view-http-cache.
   if (host == chrome::kChromeUICacheHost) {
